# front

./: CMakeLists.txt  Explainer.md  Implementation.md  LICENSE  README.md
examples/: function.fr
frc/: CMakeLists.txt  dstr.c  dstr.h  error.h  lexer.c  lexer.h  main.c  parser.c  parser.h  pipeline.c  pipeline.h  token.h  tokens.def
test/: CMakeLists.txt  function.frt
